javascript error on non-toc pages, and fixing scroll overflow on medium pages.

--- a/themes/custom/ts_wrin/sass/components/_toc.scss
+++ b/themes/custom/ts_wrin/sass/components/_toc.scss
@@ -139,7 +139,6 @@
     .menu-wrapper > .menu > ul > li > ul {
       display: flex;
       justify-content: flex-start;
-      margin: 0;
       padding: 0;
       width: auto;
       z-index: 1;
